# cardbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.sqlx/: query-24528c75ab173c19eca0f5850a992260bf434410d7e0aa638297d46c1c53c413.json  query-912b628c84974d7bfa59f7b1f213f5f0e7d0b3e7573df3654132d0308d109b31.json
migrations/: 20240215022647_initial.sql
src/: main.rs
