[package]
name = "cardbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
poise = "0.6.1"
regex = "1.10.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
axum = "0.7.4"
futures = "0.3"
serde = { version = "1.0.196", features = ["derive"]}
http = "1.0.0"
